--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -13,6 +13,11 @@
     <height>485</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>.AppleSystemUIFont</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
