--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -15,7 +15,8 @@
   </property>
   <property name="font">
    <font>
-    <family>.AppleSystemUIFont</family>
+    <family>Arial</family>
+    <pointsize>12</pointsize>
    </font>
   </property>
   <property name="windowTitle">
@@ -1219,7 +1220,7 @@
          </property>
          <property name="font">
           <font>
-           <family>.AppleSystemUIFont</family>
+           <family>Arial</family>
            <pointsize>5</pointsize>
           </font>
          </property>
@@ -1264,7 +1265,7 @@
          </property>
          <property name="font">
           <font>
-           <family>.AppleSystemUIFont</family>
+           <family>Arial</family>
            <pointsize>5</pointsize>
           </font>
          </property>
